# Programacion1

./: README.md
Aplicación CRUD en C++ con Base de Datos/: Aplicación CRUD en C++ con Base de Datos.docx  main.cpp  universidad.sql
Conexión a Base de Datos/: CMakeLists.txt  Database.h  README.md  UserRepository.cpp  main.cpp
Lista Enlazada Dinamica/: main.cpp
Lista Enlazada con Objetos/: lista_alumnos.cpp
Tarea 1 Ejercicios/: Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp
Tarea 2 (PROCESAMIENTO DE ARCHIVOS)/: alumnos.cpp  alumnos.txt  prueba.cpp
Tarea Programacion I/: Ejercicio4.cpp  Ejercicio5.cpp
